Test using NSO 5.5.2

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: registry.gitlab.com/nso-developer/ci-runner-image:latest
+    env:
+      NSO_VERSION: 5.5.2
     steps:
       - name: "Install build prerequisites"
         run: |
