--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,20 +4,30 @@ on: [push,pull_request]
 
 
 jobs:
-  get-version-set:
+  get_version_set:
     runs-on: ubuntu-latest
+    outputs:
+      versions_json: ${{ steps.get-versions.outputs.vers }}
     steps:
       - name: "Check out repository code"
         uses: actions/checkout@v2
         with:
           repository: 'nso-developer/nso-docker'
           path: 'nso-docker'
+      - id: get-versions
+        run: |
+          echo "::set-output name=verz::$(cat nso-docker/version-sets/supported-nso/versions.json)"
+          echo ::set-output name=vers::$(echo {"NSO_VERSION": [5.5.2]})
+
 
   test:
-    needs: get-version-set
+    needs: get_version_set
     runs-on: ubuntu-latest
     container:
       image: registry.gitlab.com/nso-developer/ci-runner-image:latest
+    strategy:
+      matrix:
+        include: ${{ fromJson(needs.get_version_set.outputs.versions_json) }}
     env:
       NSO_VERSION: 5.5.2
       NSO_IMAGE_PATH: ghcr.io/nso-developer/nso-docker/
