--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,11 +9,11 @@ jobs:
     outputs:
       versions_json: ${{ steps.get-versions.outputs.vers }}
     steps:
-      - name: "Check out repository code"
-        uses: actions/checkout@v2
-        with:
-          repository: 'nso-developer/nso-docker'
-          path: 'nso-docker'
+#      - name: "Check out repository code"
+#        uses: actions/checkout@v2
+#        with:
+#          repository: 'nso-developer/nso-docker'
+#          path: 'nso-docker'
       - id: get-versions
         run: |
           echo "::set-output name=verz::$(cat nso-docker/version-sets/supported-nso/versions.json)"
