--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
       - id: get-versions
         run: |
           echo "::set-output name=verz::$(cat nso-docker/version-sets/supported-nso/versions.json)"
-          echo ::set-output name=vers::[{"NSO_VERSION": "5.5.2"}]
+          echo ::set-output name=vers::[{"ver": "5.5.2"}]
 
 
   test:
@@ -28,10 +28,13 @@ jobs:
     strategy:
       matrix:
         include: ${{ fromJson(needs.get_version_set.outputs.versions_json) }}
+    name: "${{ matrix.ver }}"
     env:
       NSO_VERSION: 5.5.2
       NSO_IMAGE_PATH: ghcr.io/nso-developer/nso-docker/
     steps:
+      - name: "FOO"
+        run: echo ${{ matrix.ver }}
       - name: "Install build prerequisites"
         run: |
           which curl docker expect gpg2 sshpass xmlstarlet >/dev/null || (echo "Installing prerequisites..." && apt-get -y update && DEBIAN_FRONTEND=noninteractive apt-get install -qy apt-transport-https ca-certificates curl expect gnupg2 software-properties-common sshpass xmlstarlet; which docker || (echo "Installing docker..." && curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - && apt-key fingerprint 0EBFCD88 && add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" && apt-get -y update && apt-get -qy install -qy docker-ce docker-ce-cli containerd.io))
