--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,6 @@ jobs:
         with:
           repository: 'nso-developer/nso-docker'
           path: 'nso-docker'
-      - name: "Cat lod.json"
-        run: cat nso-docker/version-sets/supported-nso/lod.json
       - id: get-versions
         run: echo "::set-output name=vers::$(cat nso-docker/version-sets/supported-nso/lod.json)"
 
@@ -28,9 +26,9 @@ jobs:
     strategy:
       matrix:
         include: ${{ fromJson(needs.get_version_set.outputs.versions_json) }}
-    name: "${{ matrix.ver }}"
+    name: "${{ matrix.version }}"
     env:
-      NSO_VERSION: 5.5.2
+      NSO_VERSION: ${{ matrix.version }}
       NSO_IMAGE_PATH: ghcr.io/nso-developer/nso-docker/
     steps:
       - name: "FOO"
